<resources>
    <string name="config_helpPackageNameKey">genie-eng:app_pkg_name</string>
    <string name="config_helpPackageNameValue">com.google.android.settings.gphone</string>
    <string name="config_helpIntentExtraKey">EXTRA_PSD_KEYS</string>
    <string name="config_helpIntentNameKey">EXTRA_PSD_VALUES</string>
    <string name="config_feedbackIntentExtraKey">EXTRA_FEEDBACK_PSD_KEYS</string>
    <string name="config_feedbackIntentNameKey">EXTRA_FEEDBACK_PSD_VALUES</string>
    <string name="wifi_fail_to_scan">"Can't scan for networks"</string>
    <string name="wifi_security_short_wep">WEP</string>
    <string name="wifi_security_short_wpa">WPA</string>
    <string name="wifi_security_short_wpa2">WPA2</string>
    <string name="wifi_security_short_wpa_wpa2">WPA/WPA2</string>
    <string name="wifi_security_short_psk_generic">@string/wifi_security_short_wpa_wpa2</string>
    <string name="wifi_security_short_eap">802.1x</string>
    <string name="wifi_security_none">None</string>
    <string name="wifi_security_wep">WEP</string>
    <string name="wifi_security_wpa">WPA PSK</string>
    <string name="wifi_security_wpa2">WPA2 PSK</string>
    <string name="wifi_security_wpa_wpa2">WPA/WPA2 PSK</string>
    <string name="wifi_security_psk_generic">@string/wifi_security_wpa_wpa2</string>
    <string name="wifi_security_eap">802.1x EAP</string>
    <string name="wifi_security_passpoint">Passpoint</string>
    <string name="wifi_remembered">Saved</string>
    <string name="wifi_disabled_generic">Disabled</string>
    <string name="wifi_disabled_network_failure">IP Configuration Failure</string>
    <string name="wifi_disabled_wifi_failure">WiFi Connection Failure</string>
    <string name="wifi_disabled_password_failure">Authentication problem</string>
    <string name="wifi_not_in_range">Not in range</string>
    <string name="wifi_no_internet_no_reconnect">"No Internet Access Detected, won't automatically reconnect."</string>
    <string name="wifi_no_internet">No Internet Access.</string>
    <string name="saved_network">Saved by %1$s</string>
    <string name="connected_via_wfa">Connected via Wi‑Fi assistant</string>
    <string name="connected_via_passpoint">Connected via %1$s</string>
    <string name="available_via_passpoint">Available via %1$s</string>
    <string name="settings_package">com.android.settings</string>
    <string name="certinstaller_package">com.android.certinstaller</string>
    <string name="wifi_connected_no_internet">Connected, no Internet</string>
    <string name="bluetooth_disconnected">Disconnected</string>
    <string name="bluetooth_disconnecting">Disconnecting…</string>
    <string name="bluetooth_connecting">Connecting…</string>
    <string name="bluetooth_connected">Connected</string>
    <string name="bluetooth_pairing">Pairing…</string>
    <string name="bluetooth_connected_no_headset">Connected (no phone)</string>
    <string name="bluetooth_connected_no_a2dp">Connected (no media)</string>
    <string name="bluetooth_connected_no_map">Connected (no message access)</string>
    <string name="bluetooth_connected_no_headset_no_a2dp">Connected (no phone or media)</string>
    <string name="bluetooth_profile_a2dp">Media audio</string>
    <string name="bluetooth_profile_headset">Phone audio</string>
    <string name="bluetooth_profile_opp">File transfer</string>
    <string name="bluetooth_profile_hid">Input device</string>
    <string name="bluetooth_profile_pan">Internet access</string>
    <string name="bluetooth_profile_pbap">Contact sharing</string>
    <string name="bluetooth_profile_pbap_summary">Use for contact sharing</string>
    <string name="bluetooth_profile_pan_nap">Internet connection sharing</string>
    <string name="bluetooth_profile_map">Message Access</string>
    <string name="bluetooth_profile_sap">SIM Access</string>
    <string name="bluetooth_a2dp_profile_summary_connected">Connected to media audio</string>
    <string name="bluetooth_headset_profile_summary_connected">Connected to phone audio</string>
    <string name="bluetooth_opp_profile_summary_connected">Connected to file transfer server</string>
    <string name="bluetooth_map_profile_summary_connected">Connected to map</string>
    <string name="bluetooth_sap_profile_summary_connected">Connected to SAP</string>
    <string name="bluetooth_opp_profile_summary_not_connected">Not connected to file transfer server</string>
    <string name="bluetooth_hid_profile_summary_connected">Connected to input device</string>
    <string name="bluetooth_pan_user_profile_summary_connected">Connected to device for Internet access</string>
    <string name="bluetooth_pan_nap_profile_summary_connected">Sharing local Internet connection with device</string>
    <string name="bluetooth_pan_profile_summary_use_for">Use for Internet access</string>
    <string name="bluetooth_map_profile_summary_use_for">Use for map</string>
    <string name="bluetooth_sap_profile_summary_use_for">Use for SIM access</string>
    <string name="bluetooth_a2dp_profile_summary_use_for">Use for media audio</string>
    <string name="bluetooth_headset_profile_summary_use_for">Use for phone audio</string>
    <string name="bluetooth_opp_profile_summary_use_for">Use for file transfer</string>
    <string name="bluetooth_hid_profile_summary_use_for">Use for input</string>
    <string name="bluetooth_pairing_accept">Pair</string>
    <string name="bluetooth_pairing_accept_all_caps">PAIR</string>
    <string name="bluetooth_pairing_decline">Cancel</string>
    <string name="bluetooth_pairing_will_share_phonebook">Pairing grants access to your contacts and call history when connected.</string>
    <string name="bluetooth_pairing_error_message">"Couldn't pair with %1$s."</string>
    <string name="bluetooth_pairing_pin_error_message">"Couldn't pair with %1$s because of an incorrect PIN or passkey."</string>
    <string name="bluetooth_pairing_device_down_error_message">"Can't communicate with %1$s."</string>
    <string name="bluetooth_pairing_rejected_error_message">Pairing rejected by %1$s.</string>
    <string name="accessibility_wifi_off">Wifi off.</string>
    <string name="accessibility_no_wifi">Wifi disconnected.</string>
    <string name="accessibility_wifi_one_bar">Wifi one bar.</string>
    <string name="accessibility_wifi_two_bars">Wifi two bars.</string>
    <string name="accessibility_wifi_three_bars">Wifi three bars.</string>
    <string name="accessibility_wifi_signal_full">Wifi signal full.</string>
    <string name="process_kernel_label">Android OS</string>
    <string name="data_usage_uninstalled_apps">Removed apps</string>
    <string name="data_usage_uninstalled_apps_users">Removed apps and users</string>
    <string name="tether_settings_title_usb">USB tethering</string>
    <string name="tether_settings_title_wifi">Portable hotspot</string>
    <string name="tether_settings_title_bluetooth">Bluetooth tethering</string>
    <string name="tether_settings_title_usb_bluetooth">Tethering</string>
    <string name="tether_settings_title_all">Tethering &amp; portable hotspot</string>
    <string name="managed_user_title">All work apps</string>
    <string name="user_guest">Guest</string>
    <string name="unknown">Unknown</string>
    <string name="running_process_item_user_label">User: %1$s</string>
    <string name="launch_defaults_some">Some defaults set</string>
    <string name="launch_defaults_none">No defaults set</string>
    <string name="tts_settings">Text-to-speech settings</string>
    <string name="tts_settings_title">Text-to-speech output</string>
    <string name="tts_default_rate_title">Speech rate</string>
    <string name="tts_default_rate_summary">Speed at which the text is spoken</string>
    <string name="tts_default_pitch_title">Pitch</string>
    <string name="tts_default_pitch_summary">Affects the tone of the synthesized speech</string>
    <string name="tts_default_lang_title">Language</string>
    <string name="tts_lang_use_system">Use system language</string>
    <string name="tts_lang_not_selected">Language not selected</string>
    <string name="tts_default_lang_summary">Sets the language-specific voice for the spoken text</string>
    <string name="tts_play_example_title">Listen to an example</string>
    <string name="tts_play_example_summary">Play a short demonstration of speech synthesis</string>
    <string name="tts_install_data_title">Install voice data</string>
    <string name="tts_install_data_summary">Install the voice data required for speech synthesis</string>
    <string name="tts_engine_security_warning">This speech synthesis engine may be able to collect all the text that will be spoken, including personal data like passwords and credit card numbers. It comes from the %s engine. Enable the use of this speech synthesis engine?</string>
    <string name="tts_engine_network_required">This language requires a working network connection for text-to-speech output.</string>
    <string name="tts_default_sample_string">This is an example of speech synthesis</string>
    <string name="tts_status_title">Default language status</string>
    <string name="tts_status_ok">%1$s is fully supported</string>
    <string name="tts_status_requires_network">%1$s requires network connection</string>
    <string name="tts_status_not_supported">%1$s is not supported</string>
    <string name="tts_status_checking">Checking…</string>
    <string name="tts_engine_settings_title">Settings for %s</string>
    <string name="tts_engine_settings_button">Launch engine settings</string>
    <string name="tts_engine_preference_section_title">Preferred engine</string>
    <string name="tts_general_section_title">General</string>
    <string name="tts_reset_speech_pitch_title">Reset speech pitch</string>
    <string name="tts_reset_speech_pitch_summary">Reset the pitch at which the text is spoken to default.</string>
    <string name="choose_profile">Choose Profile</string>
    <string name="category_personal">Personal</string>
    <string name="category_work">Work</string>
    <string name="oem_preferred_feedback_reporter" />
    <string name="development_settings_title">Developer options</string>
    <string name="development_settings_enable">Enable developer options</string>
    <string name="development_settings_summary">Set options for app development</string>
    <string name="development_settings_not_available">Developer options are not available for this user</string>
    <string name="vpn_settings_not_available">VPN settings are not available for this user</string>
    <string name="tethering_settings_not_available">Tethering settings are not available for this user</string>
    <string name="apn_settings_not_available">Access Point Name settings are not available for this user</string>
    <string name="enable_adb">USB debugging</string>
    <string name="enable_adb_summary">Debug mode when USB is connected</string>
    <string name="clear_adb_keys">Revoke USB debugging authorizations</string>
    <string name="bugreport_in_power">Bug report shortcut</string>
    <string name="bugreport_in_power_summary">Show a button in the power menu for taking a bug report</string>
    <string name="keep_screen_on">Stay awake</string>
    <string name="keep_screen_on_summary">Screen will never sleep while charging</string>
    <string name="bt_hci_snoop_log">Enable Bluetooth HCI snoop log</string>
    <string name="monitoring_subtitle_vpn">VPN</string>
    <string name="monitoring_subtitle_network_logging">Network Logging</string>
    <string name="monitoring_description_network_logging">"Your admin has turned on network logging, which monitors traffic on your device.

For more information, contact your admin."</string>
    <string name="accessibility_quick_settings_settings">Open settings.</string>
    <string name="accessibility_quick_settings_expand">Open quick settings.</string>
    <string name="accessibility_quick_settings_edit">Edit order of settings.</string>
</resources>