<?xml version="1.0" encoding="utf-8"?>
<com.android.systemui.statusbar.phone.QuickStatusBarHeader android:layout_gravity="@integer/notification_panel_layout_gravity" android:id="@id/header" android:clickable="false" android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="@dimen/status_bar_header_height" android:baselineAligned="false"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:systemui="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:clipChildren="false" android:clipToPadding="false" android:layout_width="wrap_content" android:layout_height="48.0dip" android:layout_marginTop="4.0dip" android:layout_marginEnd="12.0dip" android:layout_alignParentEnd="true">
        <com.android.systemui.statusbar.phone.MultiUserSwitch android:id="@id/multi_user_switch" android:background="@drawable/ripple_drawable" android:focusable="true" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_alignParentEnd="true">
            <ImageView android:layout_gravity="center" android:id="@id/multi_user_avatar" android:layout_width="@dimen/multi_user_avatar_expanded_size" android:layout_height="@dimen/multi_user_avatar_expanded_size" android:scaleType="centerInside" />
        </com.android.systemui.statusbar.phone.MultiUserSwitch>
        <com.android.systemui.statusbar.AlphaOptimizedImageView android:id="@android:id/edit" android:background="?android:selectableItemBackgroundBorderless" android:padding="14.0dip" android:focusable="true" android:clickable="true" android:clipToPadding="false" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/ic_mode_edit" android:contentDescription="@string/accessibility_quick_settings_edit" />
        <com.android.systemui.statusbar.AlphaOptimizedFrameLayout android:id="@id/settings_button_container" android:clipChildren="false" android:clipToPadding="false" android:layout_width="48.0dip" android:layout_height="48.0dip">
            <com.android.systemui.statusbar.phone.SettingsButton android:id="@id/settings_button" android:background="@drawable/ripple_drawable" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/ic_settings_20dp" android:contentDescription="@string/accessibility_quick_settings_settings" style="@android:style/Widget.Material.Button.Borderless" />
            <com.android.systemui.statusbar.AlphaOptimizedImageView android:id="@id/tuner_icon" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/tuner" android:tint="#4dffffff" android:paddingStart="36.0dip" android:tintMode="src_in" />
        </com.android.systemui.statusbar.AlphaOptimizedFrameLayout>
        <com.android.systemui.statusbar.phone.ExpandableIndicator android:id="@id/expand_indicator" android:background="?android:selectableItemBackgroundBorderless" android:padding="12.0dip" android:focusable="true" android:clickable="true" android:clipToPadding="false" android:layout_width="48.0dip" android:layout_height="48.0dip" android:contentDescription="@string/accessibility_quick_settings_expand" />
    </LinearLayout>
    <TextView android:textAppearance="@style/TextAppearance.StatusBar.Expanded.EmergencyCallsOnly" android:gravity="center_vertical" android:id="@id/header_emergency_calls_only" android:paddingTop="6.0dip" android:focusable="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@android:string/emergency_calls_only" android:singleLine="true" android:layout_alignParentTop="true" android:paddingStart="16.0dip" android:paddingEnd="16.0dip" android:layout_alignParentStart="true" />
    <include android:id="@id/date_time_alarm_group" android:layout_alignParentTop="true" android:layout_alignParentStart="true" layout="@layout/status_bar_alarm_group" />
    <com.android.systemui.qs.QuickQSPanel android:id="@id/quick_qs_panel" android:focusable="true" android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="52.0dip" android:importantForAccessibility="yes" android:layout_marginStart="12.0dip" android:layout_marginEnd="12.0dip" android:layout_alignParentEnd="true" android:accessibilityTraversalBefore="@id/expand_indicator" android:accessibilityTraversalAfter="@id/date_time_group" />
    <com.android.systemui.statusbar.AlphaOptimizedImageView android:id="@id/qs_detail_header_progress" android:background="@color/qs_detail_progress_track" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/indeterminate_anim" android:layout_alignParentBottom="true" android:alpha="0.0" />
    <TextView android:textSize="11.0dip" android:textStyle="bold" android:textColor="#ff00a040" android:layout_gravity="center_vertical" android:id="@id/header_debug_info" android:padding="2.0dip" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="sans-serif-condensed" />
</com.android.systemui.statusbar.phone.QuickStatusBarHeader>